# chat-application

chat_api/: pyproject.toml
chat_api/src/accounts/: models.py  serializers.py  v1.py  views.py
chat_api/src/chat/: settings.py  urls.py
chat_api/src/chatter/: filters.py  models.py  serializers.py  v1.py  views.py
chat_webui/: package-lock.json  package.json
